removed bad link to demo server 0.7 in install-script.md.vm

--- a/src/site/markdown/install-script.md.vm
+++ b/src/site/markdown/install-script.md.vm
@@ -120,7 +120,7 @@ entsprechende IP-Adresse / Servername angepasst werden:
 Test der Importschnittstelle
 ----------------------------
 Die Importschnittstelle des Servers kann mit den Client-Programmen
-aus dem Software-Paket (ZIP) des [Demo-Server](../../0.7/dwh-import/demo-server.html)
+aus dem Software-Paket (ZIP) des [Demo-Server](demo-server.html)
 getestet werden:
 
 ```
